Fix image width not to extend too wide. Fix a bug in MultiTrackBinnedArray that didn't report total read counts.

--- a/reporting/style.css
+++ b/reporting/style.css
@@ -91,6 +91,10 @@ td p.buttons {
   text-align: right;
 }
 
+td img {
+  max-width: 300pt;
+}
+
 p.note {
   font-size: 11pt;
   color: #555;
